--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -3,7 +3,6 @@ uvicorn[standard]==0.31.1
 sqlalchemy==2.0.36
 python-multipart==0.0.9
 pydantic==2.9.2
-# Install the repository itself so ``import backend`` works when Render
-# executes commands from the ``backend`` directory.
--e ..
-
+# Install the backend package itself so ``uvicorn backend:app`` works when Render
+# runs commands inside this ``backend`` directory.
+-e .
